@@ -6,11 +6,13 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -18,61 +20,47 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
+@Component
+@RequiredArgsConstructor
 public class AuthTokenFilter extends OncePerRequestFilter {
 
-    @Autowired
-    private JwtUtils jwtUtils;
+    private final JwtUtils jwtUtils;
+    private final ShopUserDetailsService userDetailsService;
 
-    @Autowired
-    private ShopUserDetailsService userDetailsService;
-
-    private static final List<String> SKIP_PATHS = Arrays.asList(
+    private static final List<String> SKIP_PATHS = List.of(
             "/v3/api-docs",
             "/swagger",
             "/webjars",
             "/api/v1/auth",
             "/login-page",
-            "/dashboard",
-            "/products",
-            "/categories",
-            "/sales",
             "/signup",
             "/reset-password",
             "/css",
-            "/js",
-            "/"
+            "/js"
     );
 
     @Override
-    protected void doFilterInternal(@NonNull HttpServletRequest request,
-                                    @NonNull HttpServletResponse response,
-                                    @NonNull FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
         String path = request.getRequestURI();
 
-        // Skip JWT processing for specified paths
         if (SKIP_PATHS.stream().anyMatch(path::startsWith)) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        // Process JWT for API requests
         try {
             String jwt = parseToken(request);
-            if (StringUtils.hasText(jwt) && jwtUtils.validateToken(jwt)) {
+            if (jwt != null && jwtUtils.validateToken(jwt)) {
                 String username = jwtUtils.getUsernameFromToken(jwt);
-                UserDetails userDetails = userDetailsService.loadUserByUsername(username);
+                var userDetails = userDetailsService.loadUserByUsername(username);
                 var auth = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
         } catch (JwtException e) {
-            logger.warn("JWT exception: {}");
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
             response.getWriter().write("Invalid or expired token: " + e.getMessage());
-            return;
-        } catch (Exception e) {
-            logger.error("Internal server error: {}");
-            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().write("Internal server error: " + e.getMessage());
             return;
         }
 
@@ -80,10 +68,8 @@ public class AuthTokenFilter extends OncePerRequestFilter {
     }
 
     private String parseToken(HttpServletRequest request) {
-        String headerAuth = request.getHeader("Authorization");
-        if (StringUtils.hasText(headerAuth) && headerAuth.startsWith("Bearer ")) {
-            return headerAuth.substring(7);
-        }
+        String header = request.getHeader("Authorization");
+        if (header != null && header.startsWith("Bearer ")) return header.substring(7);
         return null;
     }
 }
